@@ -1,4 +1,4 @@
-package hostel_application.student_service.services.serviceImplementation;
+package hostel_application.student_service.services.impl;
 
 import hostel_application.student_service.dto.StudentDto;
 import hostel_application.student_service.exception.ResourceNotFoundException;
@@ -6,11 +6,14 @@ import hostel_application.student_service.mapper.StudentMapper;
 import hostel_application.student_service.model.Student;
 import hostel_application.student_service.repository.StudentRepository;
 import hostel_application.student_service.services.StudentService;
+import hostel_application.student_service.services.constants.StudentConstants;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
+
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class StudentServiceImplementation implements StudentService {
@@ -21,14 +24,14 @@ public class StudentServiceImplementation implements StudentService {
     @Override
     public void deleteStudent(String studentId) {
         Student student = studentRepository.findById(studentId)
-                .orElseThrow(() -> new ResourceNotFoundException("Student not found with ID: " + studentId));
+                .orElseThrow(() -> new ResourceNotFoundException(StudentConstants.STUDENT_NOT_FOUND + studentId));
         studentRepository.delete(student);
     }
 
     @Override
     public StudentDto getStudentById(String studentId) {
         Student student = studentRepository.findById(studentId)
-                .orElseThrow(() -> new ResourceNotFoundException("Student not found with ID: " + studentId));
+                .orElseThrow(() -> new ResourceNotFoundException(StudentConstants.STUDENT_NOT_FOUND + studentId));
         return studentMapper.toDto(student);
     }
 
@@ -36,21 +39,23 @@ public class StudentServiceImplementation implements StudentService {
     public List<StudentDto> getAllStudents() {
         return studentRepository.findAll().stream()
                 .map(studentMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
-    public String askFacilities() {
+    public String askFacilities(String message) {
         return "";
     }
 
     @Override
-    public String sendComplaints() {
+    public String sendComplaints(String issue) {
         return "";
     }
 
     @Override
-    public void selectAWorkerForTheIssue() {
+    public void selectAWorkerForTheIssue(String issueType) {
+
+
 
     }
 
@@ -68,7 +73,6 @@ public class StudentServiceImplementation implements StudentService {
     @Override
     public StudentDto registerStudent(StudentDto studentDto){
         Student student =studentMapper.toEntity(studentDto);
-        System.out.println("Student mapped: " + student);
         Student savedStudent=studentRepository.save(student);
         return studentMapper.toDto(savedStudent);
     }
